[gd_scene load_steps=9 format=3 uid="uid://f7n84s8ib2va"]

[ext_resource type="Script" uid="uid://dxfr12reu6ce" path="res://Scripts/crusher.gd" id="1_7q8l8"]
[ext_resource type="Texture2D" uid="uid://cnmn4hyufmi4v" path="res://Assets/Tiles/Transparent/crusher.png" id="1_um715"]
[ext_resource type="Texture2D" uid="uid://b3qyxcuforw6e" path="res://Assets/Tiles/Transparent/spike.png" id="2_q14rs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w8m3d"]
size = Vector2(2, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7q8l8"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2dbam"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xumv7"]
size = Vector2(48, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q14rs"]
size = Vector2(46, 14)

[node name="Crusher" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 6
script = ExtResource("1_7q8l8")
left_area_size = Vector2(16, 64)
right_area_size = Vector2(16, 64)
left_area_offset = Vector2(12, 8)
right_area_offset = Vector2(-12, 8)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("1_um715")
metadata/_edit_group_ = true

[node name="Area2D" type="Area2D" parent="." groups=["Hazard"]]
position = Vector2(16, 16)
rotation = 3.14159
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
texture = ExtResource("2_q14rs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(4, 6)
shape = SubResource("RectangleShape2D_w8m3d")
debug_color = Color(0.672023, 0, 0.0147909, 0.419608)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-4, 6)
rotation = 3.14159
shape = SubResource("RectangleShape2D_w8m3d")
debug_color = Color(0.670588, 0, 0.0156863, 0.419608)

[node name="Area2D2" type="Area2D" parent="." groups=["Hazard"]]
position = Vector2(0, 16)
rotation = 3.14159
metadata/_edit_group_ = true

[node name="Sprite2D2" type="Sprite2D" parent="Area2D2"]
position = Vector2(-9.53674e-07, 0)
texture = ExtResource("2_q14rs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(4, 6)
rotation = 3.14159
shape = SubResource("RectangleShape2D_w8m3d")
debug_color = Color(0.672023, 0, 0.0147909, 0.419608)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(-4, 6)
rotation = 3.14159
shape = SubResource("RectangleShape2D_w8m3d")
debug_color = Color(0.670588, 0, 0.0156863, 0.419608)

[node name="Area2D3" type="Area2D" parent="." groups=["Hazard"]]
position = Vector2(-16, 16)
rotation = 3.14159
metadata/_edit_group_ = true

[node name="Sprite2D3" type="Sprite2D" parent="Area2D3"]
texture = ExtResource("2_q14rs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2(-4, 6)
rotation = 3.14159
shape = SubResource("RectangleShape2D_w8m3d")
debug_color = Color(0.672023, 0, 0.0147909, 0.419608)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D3"]
position = Vector2(4, 6)
rotation = 3.14159
shape = SubResource("RectangleShape2D_w8m3d")
debug_color = Color(0.670588, 0, 0.0156863, 0.419608)

[node name="LeftArea" type="Area2D" parent="."]
position = Vector2(0, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftArea"]
position = Vector2(-32, 16)
shape = SubResource("RectangleShape2D_7q8l8")
debug_color = Color(0.615686, 0.537255, 0, 0.419608)

[node name="RightArea" type="Area2D" parent="."]
position = Vector2(0, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightArea"]
position = Vector2(32, 16)
shape = SubResource("RectangleShape2D_2dbam")
debug_color = Color(0.615686, 0.537255, 0, 0.419608)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xumv7")
metadata/_edit_group_ = true

[node name="Area2D4" type="Area2D" parent="." groups=["Hazard"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D4"]
shape = SubResource("RectangleShape2D_q14rs")
debug_color = Color(0.672023, 0, 0.0147909, 0.419608)

[connection signal="area_entered" from="LeftArea" to="." method="_on_area_entered"]
[connection signal="area_exited" from="LeftArea" to="." method="_on_area_exited"]
[connection signal="area_entered" from="RightArea" to="." method="_on_area_entered"]
[connection signal="area_exited" from="RightArea" to="." method="_on_area_exited"]
